Fixed translation and visibility of elements for gallery and view mode.

--- a/styles/main/_footer.scss
+++ b/styles/main/_footer.scss
@@ -27,6 +27,11 @@
 	p.home_copyright {
 		text-transform: uppercase;
 	}
+
+	p:empty,
+	#home_socials a[href=""] {
+		display: none;
+	}
 }
 
 .hide_footer {
